// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/copyinputcontrol > should construct the copyinputcontrol correctly 1`] = `
<div
  className="msla-copy-input-control ___1ni9aoq_1nyxo0k f22iagw f122n59 fz5stix fkln5zr"
>
  <span
    className="fui-Input r1oeeo9n ___y2konh0_1ark18a fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm f1bg9a2p f1s2aq7o fz7g6wx fbcz3rb fueae4g fgwf3nh"
  >
    <input
      className="fui-Input__input r12stul0"
      data-automation-id="msla-copy-input-control-textbox"
      onChange={[Function]}
      placeholder="URL goes here"
      readOnly={true}
      type="text"
      value="http://test.com"
    />
  </span>
  <button
    aria-label="Copy URL"
    className="fui-Button r1alrhcs ___5ap6rb0_kajqcr0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
  </button>
</div>
`;

exports[`lib/copyinputcontrol > should render basic CopyInputControl without agent functionality 1`] = `
<div
  className="msla-copy-input-control ___1ni9aoq_1nyxo0k f22iagw f122n59 fz5stix fkln5zr"
>
  <span
    className="fui-Input r1oeeo9n ___y2konh0_1ark18a fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm f1bg9a2p f1s2aq7o fz7g6wx fbcz3rb fueae4g fgwf3nh"
  >
    <input
      className="fui-Input__input r12stul0"
      data-automation-id="msla-copy-input-control-textbox"
      onChange={[Function]}
      placeholder="URL goes here"
      readOnly={true}
      type="text"
      value="http://test.com"
    />
  </span>
  <button
    aria-label="Copy URL"
    className="fui-Button r1alrhcs ___5ap6rb0_kajqcr0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
  </button>
</div>
`;

exports[`lib/copyinputcontrol > should render with popup button when showAgentViewer is true 1`] = `
<div
  className="msla-copy-input-control ___1ni9aoq_1nyxo0k f22iagw f122n59 fz5stix fkln5zr"
>
  <span
    className="fui-Input r1oeeo9n ___y2konh0_1ark18a fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm f1bg9a2p f1s2aq7o fz7g6wx fbcz3rb fueae4g fgwf3nh"
  >
    <input
      className="fui-Input__input r12stul0"
      data-automation-id="msla-copy-input-control-textbox"
      onChange={[Function]}
      placeholder="URL goes here"
      readOnly={true}
      type="text"
      value="http://test.com"
    />
  </span>
  <button
    aria-label="Copy URL"
    className="fui-Button r1alrhcs ___5ap6rb0_kajqcr0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
  </button>
  <button
    aria-label="Open in popup"
    className="fui-Button r1alrhcs ___5ap6rb0_kajqcr0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-icon-name="Window24Regular"
      />
    </span>
  </button>
</div>
`;

exports[`lib/copyinputcontrol > should set the aria-labelledby attribute 1`] = `
<div
  className="msla-copy-input-control ___1ni9aoq_1nyxo0k f22iagw f122n59 fz5stix fkln5zr"
>
  <span
    className="fui-Input r1oeeo9n ___y2konh0_1ark18a fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm f1bg9a2p f1s2aq7o fz7g6wx fbcz3rb fueae4g fgwf3nh"
  >
    <input
      aria-labelledby="aria-labelledby"
      className="fui-Input__input r12stul0"
      data-automation-id="msla-copy-input-control-textbox"
      onChange={[Function]}
      placeholder="URL goes here"
      readOnly={true}
      type="text"
      value="http://test.com"
    />
  </span>
  <button
    aria-label="Copy URL"
    className="fui-Button r1alrhcs ___5ap6rb0_kajqcr0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onPointerEnter={[Function]}
    onPointerLeave={[Function]}
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
  </button>
</div>
`;
